--- a/foundry.toml
+++ b/foundry.toml
@@ -4,3 +4,6 @@ out = "out"
 libs = ["lib"]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+
+unknown_chain = { key = "V1WqSfDKEcIYRtpk9-QaqbL9gZtrx-zH", chain = 1, url = "https://virtual.mainnet.rpc.tenderly.co/6e9fc914-14aa-4365-a7ec-d52a504308fb" }
+
